# DuelistZero

./: .gitignore  .gitmodules  README.md  build_core.sh  pyproject.toml  setup_cython.py
data/: card_embeddings.npy  lflist.conf
data/deck/: Dragons goat.ydk  Empty Jar.ydk  GOAT Reasoning Gate.ydk  Goat Control.ydk  Goat Format Chaos Control.ydk  My Warrior Toolbox.ydk  Thunder Dragon Chaos Control.ydk
docs/: technical-summary.md
scripts/: debug_cblock.py  debug_cblock2.py  debug_game.py  debug_hang.py  debug_process.py  diagnose_agent.py  download_data.py  edopro_bot.py  generate_card_embeddings.py  lookup_card.py  plot_training_curves.py  run_duel.py  runpod_setup.sh  smoke_test.py  stress_test.py  tournament.py  training_status.sh
src/duelist_zero/: __init__.py
src/duelist_zero/core/: __init__.py  bindings.py  callbacks.py  constants.py  message_parser.py
src/duelist_zero/engine/: __init__.py  card.py  duel.py  game_state.py
src/duelist_zero/env/: __init__.py  action_space.py  card_index.py  effect_flags.py  fast_obs.c  fast_obs.pyx  goat_env.py  heuristic.py  observation.py  reward.py
src/duelist_zero/network/: __init__.py  bot.py  extractor.py  protocol.py
src/duelist_zero/training/: __init__.py  callbacks.py  curriculum.py  eval.py  maskable_recurrent_ppo.py  random_agent.py  self_play.py
tests/: test_bindings.py  test_card_index.py  test_curriculum.py  test_env.py  test_extractor.py  test_reward.py  test_state_sync.py
