[project]
name = "duelist-zero"
version = "0.1.0"
description = "Duelist Zero: GOAT Edition — a reinforcement learning agent for Yu-Gi-Oh! GOAT format"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "sb3-contrib>=2.3.0",
    "stable-baselines3>=2.3.0",
    "cffi>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/duelist_zero"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
